# waffle

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: waffle-subagent.md
.claude/hooks/: check-drift-on-write.py  enforce-spec-first.py  notify-advisor-consultation.py  notify-validate-render-after-write.py  post-bash-dispatch.py  pre-bash-dispatch.py  protect-document-json.py  protect-raw-json-access.py  protect-render-output.py  require-query-before-array-fill.py
.claude/skills/: brainstorm  ddd-advisor  mermaid-guide  platform-advisor  scrum-knowledge  skills-creator  tech-lead-advisor  ux-advisor
.waffle/: config.json
.waffle/agent/: waffle-subagent.md  waffle.md
.waffle/coding/: architecture-python-hexagonal.md  architecture-typescript-hexagonal.md  architecture-waffle.md  coding-standard-python-hexagonal.md  coding-standard-typescript-hexagonal.md  coding-standard-waffle.md  tech-stack-python-hexagonal.md  tech-stack-typescript-hexagonal.md  tech-stack-waffle.md  test-standard-python-hexagonal.md  test-standard-typescript-hexagonal.md  test-standard-waffle.md  tool-integration-claude-code-hooks.md
.waffle/handoff/: handoff-agentschema-v2.html  handoff-agentschema-v2.md  handoff-agg-document.html  handoff-agg-document.md  handoff-brainstorm-uc-render-handoff-template.html  handoff-brainstorm-uc-render-handoff-template.md  handoff-concept-source-root-resolution.html  handoff-concept-source-root-resolution.md  handoff-uc-check-verification-gate.html  handoff-uc-check-verification-gate.md  handoff-uc-init-coding-preset.html  (+11 more)
docs/: handoff-goal-loop-orchestration.md  handoff-has-udd-brainstorms.md  handoff-has-udd-concept-map-redesign.md
features/: cli.feature  environment.py  mcp.feature  query.feature  render.feature  scaffold.feature  validate.feature
scripts/: check_scenario_drift.py  check_schema_version_drift.py  check_spec_referential_integrity.py
tests/: test_lifecycle_guard.py  test_part_renderer.py  test_path_template.py  test_schema_status.py
(+1102 files in other folders)
