[project]
name = "waffle"
version = "0.0.1"
description = "Schema-shaped structured document engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4",
    "typer>=0.12",
    "fastmcp>=2",
]

[dependency-groups]
dev = ["pytest>=8", "behave>=1.2.6"]

[project.scripts]
waffle = "waffle.adapters.inbound.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waffle"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
