[project]
name = "waffle"
version = "0.0.1"
description = "Schema-shaped structured document engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4",
    "typer>=0.12",
    "fastmcp>=2",
    "pydoclint>=0.9.1",
    "jsonpatch>=1.33",
    "tree-sitter>=0.26.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-javascript>=0.25.0",
    "jmespath>=1,<2",
]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
waffle = "waffle.adapters.inbound.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waffle"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
